Use Annotations for logging