@@ -21,17 +21,13 @@
 
 package org.radarbase.fcm.config;
 
+import lombok.extern.slf4j.Slf4j;
 import org.jivesoftware.smack.ConnectionConfiguration;
-import org.jivesoftware.smack.ReconnectionManager;
-import org.jivesoftware.smack.XMPPConnection;
-import org.jivesoftware.smack.tcp.XMPPTCPConnection;
 import org.jivesoftware.smack.tcp.XMPPTCPConnectionConfiguration;
 import org.jivesoftware.smackx.gcm.provider.GcmExtensionProvider;
 import org.jivesoftware.smackx.ping.PingFailedListener;
 import org.jivesoftware.smackx.ping.PingManager;
 import org.radarbase.fcm.downstream.FcmSender;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.annotation.Bean;
@@ -40,7 +36,6 @@ import org.springframework.context.annotation.ImportResource;
 import org.springframework.context.event.EventListener;
 import org.springframework.integration.config.EnableIntegration;
 import org.springframework.integration.xmpp.config.XmppConnectionFactoryBean;
-import org.springframework.integration.xmpp.support.DefaultXmppHeaderMapper;
 
 import javax.annotation.PreDestroy;
 import javax.net.ssl.SSLSocketFactory;
@@ -48,9 +43,8 @@ import javax.net.ssl.SSLSocketFactory;
 @Configuration
 @EnableIntegration
 @ImportResource({"classpath:inbound-xmpp.xml", "classpath:outbound-xmpp.xml"})
+@Slf4j
 public class FcmAppConfiguration implements PingFailedListener {
-
-    private static final Logger logger = LoggerFactory.getLogger(FcmAppConfiguration.class);
 
     private XmppConnectionFactoryBean connectionFactoryBean;
 
@@ -94,7 +88,7 @@ public class FcmAppConfiguration implements PingFailedListener {
     @EventListener(ApplicationReadyEvent.class)
     public void registerPing() throws Exception {
         // Set the ping interval
-        logger.info("Setting the PING interval to 100 seconds");
+        log.info("Setting the PING interval to 100 seconds");
         final PingManager pingManager = PingManager.getInstanceFor(connectionFactoryBean.getObject());
         pingManager.setPingInterval(100);
         pingManager.registerPingFailedListener(this);
@@ -104,7 +98,7 @@ public class FcmAppConfiguration implements PingFailedListener {
 /*    @EventListener(ApplicationReadyEvent.class)
     public void registerReconnection() throws Exception {
         // Set the ping interval
-        logger.info("Setting the PING interval to 100 seconds");
+        log.info("Setting the PING interval to 100 seconds");
         final PingManager pingManager = PingManager.getInstanceFor(connectionFactoryBean.getObject());
         pingManager.setPingInterval(100);
         pingManager.registerPingFailedListener(this);
@@ -112,19 +106,20 @@ public class FcmAppConfiguration implements PingFailedListener {
 
 
     @Bean("fcmSenderProps")
-    public FcmSender getFcmSender() throws ClassNotFoundException, ClassCastException, InstantiationException, IllegalAccessException {
-        Class<? extends FcmSender> senderClass = (Class<? extends FcmSender>) Class.forName(fcmServerConfig.getFcmsender());
-        return senderClass.newInstance();
+    @SuppressWarnings("unchecked")
+    public FcmSender getFcmSender() throws Exception {
+        Class<? extends FcmSender> senderClass =  (Class<? extends FcmSender>) Class.forName(fcmServerConfig.getFcmsender());
+        return senderClass.getConstructor().newInstance();
     }
 
     @Override
     public void pingFailed() {
-        logger.info("The ping failed, restarting the ping interval again ...");
+        log.info("The ping failed, restarting the ping interval again ...");
         try {
             final PingManager pingManager = PingManager.getInstanceFor(connectionFactoryBean.getObject());
             pingManager.setPingInterval(100);
         } catch (Exception exc) {
-            logger.warn("The ping interval cannot be started.", exc);
+            log.warn("The ping interval cannot be started.", exc);
         }
     }
 }
